tests/requests/invalid/version_03.http
GET /foo HTTP/0.9\r\n
\r\n
